# mcp-open-data-hk

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  install.sh  pyproject.toml  release.sh  run_examples.sh  setup.cfg  smithery.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  code-quality.yml  publish.yml  release.yml
src/: __init__.py  __main__.py  server.py
src/mcp_open_data_hk/: __init__.py  server.py
tests/: comprehensive_test.py  debug_search.py  test_client.py  test_data_gov_hk.py
